[package]
name = "editor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = { git = "https://github.com/eboatwright/macroquad" }
tile = { git = "https://github.com/eboatwright/tile", branch = "macroquad" }